@@ -1,3 +1,8 @@
+2009-02-18  Bjoern Haase  <bjoern.m.haase@web.de>
+
+	PR 9841
+	* elf32-avr.c: Handle case where no local symbos exist correctly.
+
 2009-02-16  Christophe Lyon  <christophe.lyon@st.com>
 
 	bfd/
